<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TccActivity" 
    android:orientation="vertical"
    android:background="@drawable/backmobile">
    <View
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_weight="0"/>
   
 	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
   
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/img_perfil"
            android:src="@drawable/perfil"
            android:background="@null"
            android:contentDescription="@string/configs"
             android:scaleType="centerInside"/>
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_weight="0"/>
 	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	       <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtemail"
        android:inputType="text" 
        android:hint="@string/email"
        android:background="@color/bluel"
        android:textColor="@color/white"
        android:textColorHint="@color/bluet"
        />
    </LinearLayout>
     <View
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_weight="0"/>
 	 	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	       <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtsenha"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:background="@color/bluel"
        android:textColor="@color/white"
        android:textColorHint="@color/bluet"
        />
    </LinearLayout>
    
 	 	   <View
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_weight="0"/>
 	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	       <Button
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:id="@+id/btnentrar"
        android:text="@string/entrar"
        android:background="@color/bluel"
        android:textColor="@color/white"
        android:textSize="20sp"/> 
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_weight="0"/>
  		<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblcadastro"
        android:text="@string/cadastro"
        android:textSize="20sp" 
        android:textColor="@color/white"
         android:onClick="cadastro"                
       android:clickable="true"
        />	 
    </LinearLayout>
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error"
        android:text="@string/erro"
        android:textSize="20sp" 
        android:textColor="@color/white"/>
          
</LinearLayout>
