<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EfetuarRecargaActivity" 
    android:orientation="vertical"
    android:background="@drawable/backmobile">
     <View
              android:layout_width="wrap_content"
              android:layout_height="8dp"
 />
     
     <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	               <View
        android:layout_width="8dp"
        android:layout_height="00dp"
      />
 <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/btn_voltar"
            android:src="@drawable/seta2"
            android:background="@null"
            android:contentDescription="@string/configs"
             android:scaleType="centerInside"/>
 </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>
   
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destino" 
        android:textColor="@color/white"
        android:textSize="16.5sp"/>   
     </LinearLayout>             
    <View
        android:layout_width="5dp"
        android:layout_height="0dp"/>
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <Spinner
       android:id="@+id/cidades"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" > 
 </Spinner>
 </LinearLayout>
 
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor" 
        android:textColor="@color/white"
        android:textSize="16.5sp"/>   
 </LinearLayout>
 
      <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
 
  <EditText
        android:id="@+id/txtvalor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" 
      />
 </LinearLayout>
 <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>
 <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagamento" 
        android:textColor="@color/white"
        android:textSize="16.5sp"/>   
 </LinearLayout>
  <View
        android:layout_width="0dp"
        android:layout_height="15dp"/>
 <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
  <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdgpagamento"
        android:orientation="horizontal" >
     
     <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdbcartao"
        android:text="@string/cartao"
        android:textColor="@color/white"
        android:onClick="onRadioButtonClicked"/>
  
       <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/cartao" />
      <View
        android:layout_width="40dp"
        android:layout_height="0dp"/>
 <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdboleto"
        android:text="@string/boleto"
        android:textColor="@color/white"
        android:onClick="onRadioButtonClicked"/>
  <ImageView
            android:layout_width="64sp"
            android:layout_height="40sp"
            android:src="@drawable/bloeto" />
      </RadioGroup>
       </LinearLayout>
         <View
        android:layout_width="0dp"
        android:layout_height="50dp"
        />
 	 	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	       <Button
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:id="@+id/btnefetuar"
        android:text="@string/efetuar"
        android:background="@color/bluel"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error"
        android:text="@string/erro"
        android:textSize="20sp" 
        android:textColor="@color/white"/>
      </LinearLayout>
</LinearLayout>
