<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecargaActivity" 
    android:orientation="vertical"
    android:background="@drawable/backmobile">
     <View
              android:layout_width="wrap_content"
              android:layout_height="8dp"
              android:layout_weight="0" />
     
     <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	               <View
        android:layout_width="8dp"
        android:layout_height="00dp"
      />
 <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/btn_voltar"
            android:src="@drawable/seta2"
            android:background="@null"
            android:contentDescription="@string/configs"
             android:scaleType="centerInside"/>
 </LinearLayout>
          <View
              android:layout_width="wrap_content"
              android:layout_height="80dp"
              android:layout_weight="0" />
          
   <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seusaldo" 
        android:textColor="@color/white"
        android:textSize="20sp"/>
    </LinearLayout>
     
           <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="0"/>
          
         <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
          <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:id="@+id/lblsaldo"/>
</LinearLayout>

          <View
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="0"/>
 	 <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	       <Button
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:id="@+id/btn_recarregar"
        android:text="@string/recarregar"
        android:background="@color/bluel"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    </LinearLayout>
    
 	 	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error"
        android:text="@string/erro"
        android:textSize="20sp" 
        android:textColor="@color/white"/>
</LinearLayout>
