<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TccActivity" 
    android:orientation="vertical"
    android:background="@drawable/backmobile">
    
     
    
    <View
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="0"/>
   
 	<LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
	          
   <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtemail"
        android:inputType="text" 
        android:hint="@string/email"
        android:background="@color/bluel"
        android:textColorHint="@color/bluet"
        android:textColor="@color/white"
        />
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_weight="0"/>
 	<LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
   
	       <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtsenha"
        android:inputType="textPassword" 
        android:hint="@string/senha"
        android:background="@color/bluel"
        android:textColorHint="@color/bluet"
          android:textColor="@color/white"
        />
    </LinearLayout>
     <View
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_weight="0"/>
 	 	<LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
	       
	       <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtcsenha"
        android:inputType="textPassword"
        android:hint="@string/csenha"
        android:background="@color/bluel"
        android:textColorHint="@color/bluet"
          android:textColor="@color/white"
        />
    </LinearLayout>
    
 	 	   <View
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_weight="0"/>
 	 <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
	        
	       <Button
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:id="@+id/btncadastrar"
        android:text="@string/cadastrar"
        android:background="@color/bluel"
        android:textColor="@color/white"
        android:textSize="20sp"/> 
    </LinearLayout>
    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        
	     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error"
        android:text="@string/erro"
        android:textSize="20sp" 
        android:textColor="@color/white"/>
 	 
    </LinearLayout>
    
          
</LinearLayout>
