<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EfetuarRecargaActivity" 
    android:orientation="vertical"
    android:background="@drawable/backmobile">
     <View
              android:layout_width="wrap_content"
              android:layout_height="8dp"
 />
     
     <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	               <View
        android:layout_width="8dp"
        android:layout_height="00dp"
      />
 <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/btn_voltar"
            android:src="@drawable/close"
            android:background="@null"
            android:contentDescription="@string/configs"
             android:scaleType="centerInside"/>
 </LinearLayout>
  
   
  <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titular" 
        android:textColor="@color/white"
        android:textSize="16.5sp"/>   
 </LinearLayout>
 
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
 
  <EditText
        android:id="@+id/txttitular"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:textColor="@color/white"/>
 </LinearLayout>
 
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
   
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpf" 
        android:textColor="@color/white"
        android:textSize="16.5sp"/>   
 </LinearLayout>
 
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
 
  <EditText
        android:id="@+id/txtcpf"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:textColor="@color/white"/>
 </LinearLayout>
<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	        

 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero" 
        android:textColor="@color/white"
        android:textSize="16.5sp"/>   
 </LinearLayout>
 
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
 
  <EditText
        android:id="@+id/txtnumero"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:textColor="@color/white"/>
 </LinearLayout>
<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	        
    
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiracao" 
        android:textColor="@color/white"
        android:textSize="16.5sp"/>   
 </LinearLayout>
 
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
 
  <EditText
        android:id="@+id/txtexpira"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:textColor="@color/white"/>
 </LinearLayout>
<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
	        

 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codseg" 
        android:textColor="@color/white"
        android:textSize="16.5sp"/>   
 </LinearLayout>
 
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
  <EditText
        android:id="@+id/txtcodseg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:textColor="@color/white"/>
 </LinearLayout>
 
 	 	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

	       <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnok"
        android:text="@string/ok"
        android:background="@color/bluel"
        android:textColor="@color/white"
        />
    </LinearLayout>
     
</LinearLayout>
