<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TccActivity" 
    android:orientation="vertical"
    android:background="@drawable/backmobile"
    >

      <View
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_weight="0"/> 
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
       
         <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/perfil"
        android:background="@null"
        android:contentDescription="@string/configs"
        android:scaleType="centerInside"/>
         
              <View
        android:layout_width="5dp"
        android:layout_height="0dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil" 
        android:textColor="@color/white"
        android:textSize="20sp"/>
    
       <View
        android:layout_width="105dp"
        android:layout_height="00dp"
/>
     <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/btnlogoff"
        android:src="@drawable/engrenagem"
        android:background="@null"
        android:contentDescription="@string/configs"
        android:scaleType="centerInside"
        />
     </LinearLayout>
     <View
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_weight="0"/> 
     <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_weight="0"
        android:background="@color/white"/>
      <View
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="0"/>
        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
         
        <ImageButton
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/btn_horarios"
            android:src="@drawable/relogio"
            android:background="@null"
            android:contentDescription="@string/configs"
             android:scaleType="centerInside"/>
        
              <View
        android:layout_width="25dp"
        android:layout_height="0dp"
       />
        <ImageButton
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/btn_rotas"
            android:src="@drawable/rotas"
            android:background="@null"
            android:contentDescription="@string/configs"
             android:scaleType="centerInside"/>
        </LinearLayout>
        
         <View
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="0"/>
        
               <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
       
        <ImageButton
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/btn_recarga"
           android:src="@drawable/cartao2"
            android:background="@null"
            android:contentDescription="@string/configs"
             android:scaleType="centerInside"/>
              <View
        android:layout_width="25dp"
        android:layout_height="0dp"
        android:layout_weight="0"/>
        <ImageButton
            android:layout_width="130dp"
            android:layout_height="130dp"
             android:id="@+id/scanner2"
            android:src="@drawable/qrcod"
            android:background="@null"
            android:contentDescription="@string/configs"
            android:scaleType="centerInside"
             android:onClick="scanQR"/>
        </LinearLayout>
    
  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/erro" 
        android:id="@+id/error"
           android:textColor="@color/white"/>
</LinearLayout>
